Use google font.

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -8,6 +8,7 @@ html(lang="en")
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
     link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
     link(rel="stylesheet" href="css/style.min.css")
+    link(rel="stylesheet" href='http://fonts.googleapis.com/css?family=Source+Code+Pro' type='text/css')
     script(type="text/javascript" src='scripts/script.js.min')
     title jackflannery.me
   body
