Mobile first redesign.

--- a/less/style.less
+++ b/less/style.less
@@ -1,89 +1,70 @@
-html {
-  background: url(../img/home-full-scrn.jpg) no-repeat center center fixed;
-  background-size: cover;
+body {
+  background-color: #272822;
+  font-family: 'Source Code Pro';
 }
 
-body {
-  font-family: Source Code Pro;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: #66D9EF;
+  &:hover {
+    color: #F92672;
+  }
+}
+
+.icons {
+  font-family: 'FontasticIcons';
 }
 
 section#header {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  margin-top: 30px;
-  background-color: #272525;
-  opacity: 0.8;
-
-  h1#animated {
-    padding: 6px 2% 6px 14%;
-    margin: 0;
-    font-size: 2em;
-    font-weight: bold;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation-name: colorize;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    color: #66D9EF;
-  }
-  .icons {
-    font-size: 2em;
-    padding: 6px;
-
-    a {
-      color: #66D9EF;
-      padding: 6px;
-    }
-    a:hover {
-      color: #F92672;
-    }
-  }
-}
-
-@keyframes colorize {
-  from {
-    background-image: linear-gradient(to right, #F92672, #66D9EF 10%, #F92672);
-  }
-  20% {
-    background-image: linear-gradient(to right, #F92672, #66D9EF 20%, #F92672);
-  }
-  30% {
-    background-image: linear-gradient(to right, #F92672, #66D9EF 30%, #F92672);
-  }
-  40% {
-    background-image: linear-gradient(to right, #F92672, #66D9EF 40%, #F92672);
-  }
-  50% {
-    background-image: linear-gradient(to right, #F92672, #66D9EF 50%, #F92672);
-  }
-  60% {
-    background-image: linear-gradient(to right, #66D9EF, #F92672 10%, #66D9EF);
-  }
-  70% {
-    background-image: linear-gradient(to right, #66D9EF, #F92672 20%, #66D9EF);
-  }
-  80% {
-    background-image: linear-gradient(to right, #66D9EF, #F92672 30%, #66D9EF);
-  }
-  90% {
-    background-image: linear-gradient(to right, #66D9EF, #F92672 40%, #66D9EF);
-  }
-  to {
-    background-image: linear-gradient(to right, #66D9EF, #F92672 50%, #66D9EF);
-  }
-}
-
-.floater {
-  float: left;
-  width: 35%;
-  font-size: 1.2em;
-  background-color: #272525;
-  opacity: 0.8;
+  text-align: center;
   color: #66D9EF;
-  margin-left: 45%;
-  margin-top: 2%;
-  padding: 0 28px;
-  border-radius: 10px;
+  margin-top: 6px;
+
+  .profile_image {
+    border-radius: 50%;
+    display: block;
+    margin: 6px auto;
+  }
+
+  .profile_links {
+    font-size: 3rem;
+    padding: 0 5px;
+    a {
+      color: #F92672;
+      &:hover {
+        color: #66D9EF;
+      }
+    }
+    p {
+      margin: 0;
+    }
+  }
+}
+
+section#content {
+  color: #F8F8F2;
+  margin-top: 12px;
+}
+
+.green_mtn {
+  color: #A6E22E;
+}
+
+section#footer {
+  text-align: center;
+  color: #F92672;
+}
+
+.big {
+  font-size: 4em;
+}
+
+.tiny {
+  font-size: 2em;
+  padding: 0 16px;
+  vertical-align: text-bottom;
 }
