--- a/templates/index.jade
+++ b/templates/index.jade
@@ -6,20 +6,42 @@ html(lang="en")
     meta(name="description" content="")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
-    link(rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css")
     link(rel="stylesheet" href="css/style.min.css")
     link(rel="stylesheet" href='http://fonts.googleapis.com/css?family=Source+Code+Pro' type='text/css')
     script(type="text/javascript" src='scripts/script.js.min')
     title jackflannery.me
   body
     section(id="header")
-      h1(id="animated") Jack Flannery
-      div(class="icons")
-        a(href="https://github.com/jmflannery")
-          i(class="fa fa-github")
-        a(href="https://twitter.com/jmflannery81")
-          i(class="fa fa-twitter")
+      div(class='container')
+        div(class='row')
+          div(class='two columns')
+            img(src='img/face-thumb-sm.png' class='profile_image')
+          div(class='five columns')
+            h1 Jack Flannery
+          div(class='one columns icons profile_links')
+            p
+              a(href='https://github.com/jmflannery') h
+              a(href='https://twitter.com/jmflannery81') t
 
-    section(class="floater home-floater")
-      p I am an independent full stack web developer. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost.
-      p When I'm not hacking, I'm probably exploring my beach neighborhood, traveling, or hiking with my wife Danielle and my dog JD.
+    section(id="content")
+      div(class='container')
+        div(class='row')
+          div(class='twelve columns')
+            p
+              |I am an independent full stack web developer. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost. I write mostly about codey™ stuff on my 
+              a(href='#') blog
+              |  (coming soon). Here I am on 
+              a(href='https://github.com/jmflannery') github
+              |. You can even check out my 
+              a(href='#') resume
+              |.
+            p When I'm not hacking, I'm probably exploring my beach neighborhood, traveling, or hiking with my wife Danielle and my dog JD.
+              span(class='icons green_mtn')  w
+
+    section(id="footer")
+      div(class='container')
+        div(class='row')
+          div(class='twelve columns icons')
+            span(class='big') p
+            span(class='tiny') &
+            span(class='big') l
