--- a/templates/index.pug
+++ b/templates/index.pug
@@ -28,7 +28,7 @@ html(lang="en")
         div(class='row')
           div(class='twelve columns')
             p
-              |I am an independent full stack web developer. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost. I write mostly about codey™ stuff on my 
+              |I am a full stack web developer with Humble Humans. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost. I write mostly about codey™ stuff on my 
               a(href='#') blog
               |  (coming soon). Here I am on 
               a(href='https://github.com/jmflannery') github
