--- a/templates/index.pug
+++ b/templates/index.pug
@@ -11,37 +11,34 @@ html(lang="en")
     script(type="text/javascript" src='scripts/script.js.min')
     title jackflannery.me
   body
-    section(id="header")
-      div(class='container')
-        div(class='row')
-          div(class='two columns')
-            img(src='img/face-thumb-sm.png' class='profile_image')
-          div(class='five columns')
+    section(class="hero")
+      div(class='image')
+
+    section(class="page")
+      section(class="header")
+        ul
+          li
             h1 Jack Flannery
-          div(class='one columns icons profile_links')
-            p
-              a(href='https://github.com/jmflannery') h
-              a(href='https://twitter.com/jmflannery81') t
+          li(class='icons profile_links')
+            a(href='https://github.com/jmflannery') h
+            a(href='https://twitter.com/jmflannery81') t
 
-    section(id="content")
-      div(class='container')
-        div(class='row')
-          div(class='twelve columns')
-            p
-              |I am a full stack web developer with Humble Humans. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost. I write mostly about codey™ stuff on my 
-              a(href='#') blog
-              |  (coming soon). Here I am on 
-              a(href='https://github.com/jmflannery') github
-              |. You can even check out my 
-              a(href='#') resume
-              |.
-            p When I'm not hacking, I'm probably exploring my beach neighborhood, traveling, or hiking with my wife Danielle and my dog JD.
-              span(class='icons green_mtn')  w
+      section(class="content")
+        p
+          |I am a full stack web developer with Humble Humans. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost. I write mostly about codey™ stuff on my 
+          a(href='#') blog
+          |  (coming soon). Here I am on 
+          a(href='https://github.com/jmflannery') github
+          |. You can even check out my 
+          a(href='#') resume
+          |.
+        p When I'm not hacking, I'm probably exploring my beach neighborhood, traveling, or hiking with my wife Danielle and my dog JD.
+          span(class='icons green_mtn')  w
 
-    section(id="footer")
-      div(class='container')
-        div(class='row')
-          div(class='twelve columns icons')
-            span(class='big') p
-            span(class='tiny') &
-            span(class='big') l
+      section(class="footer")
+        div(class='container')
+          div(class='row')
+            div(class='twelve columns icons')
+              span(class='big') p
+              span(class='tiny') &
+              span(class='big') l
