Use fontella icon fonts

--- a/less/style.less
+++ b/less/style.less
@@ -35,13 +35,12 @@ p {
 }
 
 .tiny {
-  font-family: 'Source Code Pro';
   padding: 0 16px;
   vertical-align: text-bottom;
 }
 
-.icons {
-  font-family: 'FontasticIcons';
+.icon {
+  font-family: 'fontello';
 }
 
 .green_mtn {
