--- a/templates/index.pug
+++ b/templates/index.pug
@@ -19,9 +19,9 @@ html(lang="en")
         ul
           li
             h1 Jack Flannery
-          li(class='icons profile_links')
-            a(href='https://github.com/jmflannery') h
-            a(href='https://twitter.com/jmflannery81') t
+          li(class='icon profile_links')
+            a(href='https://github.com/jmflannery') g
+            a(href='https://twitter.com/jmflannery81') w
 
       section(class="content")
         p
@@ -33,12 +33,9 @@ html(lang="en")
           a(href='#') resume
           |.
         p When I'm not hacking, I'm probably exploring my beach neighborhood, traveling, or hiking with my wife Danielle and my dog JD.
-          span(class='icons green_mtn')  w
+          span(class='icon green_mtn')  t
 
       section(class="footer")
-        div(class='container')
-          div(class='row')
-            div(class='twelve columns icons')
-              span(class='big') p
-              span(class='tiny') &
-              span(class='big') l
+        span(class='icon big') p
+        span(class='tiny') &
+        span(class='icon big') l
