--- a/templates/index.pug
+++ b/templates/index.pug
@@ -21,19 +21,28 @@ html(lang="en")
             h1 Jack Flannery
           li(class='icon profile_links')
             a(href='https://github.com/jmflannery') g
-            a(href='https://twitter.com/jmflannery81') w
+            a(href='https://twitter.com/jmflannery81') t
 
       section(class="content")
         p
-          |I am a full stack web developer with Humble Humans. I currently spend most of my time writing Ruby and Javascript, but I am always learning new things, and I love all things web, well almost. I write mostly about codey™ stuff on my 
-          a(href='#') blog
-          |  (coming soon). Here I am on 
-          a(href='https://github.com/jmflannery') github
-          |. You can even check out my 
-          a(href='#') resume
+          |I'm an independent full stack web developer.
+          | I currently spend most of my time writing Ruby and Javascript,
+          | but I am always learning new things,
+          | and I love all things web, well almost.
+          | I write mostly about codey™ stuff on my
+          a(href='http://jackflannery.blog')  blog
+          |. Here I am on
+          a(href='https://github.com/jmflannery')  github
+          |. I work with
+          a(href='http://humblehumans.com/')  Humble Humans
+          |  on client projects. I also work on
+          a(href='https://braidio.com/')  Braidio
           |.
-        p When I'm not hacking, I'm probably exploring my beach neighborhood, traveling, or hiking with my wife Danielle and my dog JD.
-          span(class='icon green_mtn')  t
+        p
+          |When I'm not hacking code,
+          | I'm probably exploring my beach neighborhood, traveling,
+          | or hiking with my wife Danielle and my dog JD.
+          span(class='icon green_mtn')  e
 
       section(class="footer")
         span(class='icon big') p
