--- a/templates/index.pug
+++ b/templates/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
     link(rel="stylesheet" href="css/style.min.css")
     link(rel="stylesheet" href='http://fonts.googleapis.com/css?family=Source+Code+Pro' type='text/css')
     script(type="text/javascript" src='scripts/script.js.min')
-    title jackflannery.me
+    title Jack Flannery
   body
     section(class="hero")
       div(class='image')
@@ -30,11 +30,11 @@ html(lang="en")
           | but I am always learning new things,
           | and I love all things web, well almost.
           | I write mostly about codey™ stuff on my
-          a(href='http://jackflannery.blog')  blog
+          a(href='https://jackflannery.blog')  blog
           |. Here I am on
           a(href='https://github.com/jmflannery')  github
           |. I work with
-          a(href='http://humblehumans.com/')  Humble Humans
+          a(href='https://humblehumans.com/')  Humble Humans
           |  on client projects. I also work on
           a(href='https://braidio.com/')  Braidio
           |.
