Update blog url

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -7,7 +7,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="apple-touch-icon" href="apple-touch-icon.png")
     link(rel="stylesheet" href="css/style.min.css")
-    link(rel="stylesheet" href='http://fonts.googleapis.com/css?family=Source+Code+Pro' type='text/css')
+    link(rel="stylesheet" href='https://fonts.googleapis.com/css?family=Source+Code+Pro' type='text/css')
     script(type="text/javascript" src='scripts/script.js.min')
     title Jack Flannery
   body
@@ -30,7 +30,7 @@ html(lang="en")
           | but I am always learning new things,
           | and I love all things web, well almost.
           | I write mostly about codey™ stuff on my
-          a(href='https://jackflannery.blog')  blog
+          a(href='http://blog.jackflannery.me/posts')  blog
           |. Here I am on
           a(href='https://github.com/jmflannery')  github
           |. I work with
